<resources>
    <string name="app_name">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_title">Diary Manager</string>
    <string name="welcome_text">Write your dreams and make it true</string>
    <string name="image_description">Image of the Company Logo.</string>
    <string name="welcome_button">LET\'S BEGIN</string>
    <string name="page2_title"><![CDATA[MEMORIES & THOUGHTS]]></string>
    <string name="page2_message">Store, explore and organize your daily thoughts, memories and plans</string>
    <string name="next">NEXT</string>
    <string name="page3_title"><![CDATA[Secure & Forever]]></string>
    <string name="page3_message">Your entries and snaps are synced securely to all your devices.Your snaps are safe with us</string>
    <string name="page4_title">PHOTO AND AUDIO SNAPS</string>
    <string name="page5_message">Photo and Audio snaps make your memories more vivid. Capture your picture, audio and attach those to your snap</string>
    <string name="con">CONTINUE</string>
    <string name="login_heading"><![CDATA[Memories & Thoughts]]></string>
    <string name="continue_with">Continue with google</string>
    <string name="tat">Terms and condition</string>
</resources>
